--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
