--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   webview_flutter: ^4.8.0
-  url_launcher: ^6.3.0
-  uni_links: ^0.5.1
+  webview_flutter_android:
+  webview_flutter_wkwebview:
 
 dev_dependencies:
   flutter_test:
